Fix code text visibility for quizzes

--- a/plugin/css/styles.css
+++ b/plugin/css/styles.css
@@ -185,3 +185,8 @@ a {
 code{
     color: lightcyan !important;
 }
+
+.answer_label pre{
+    background-color: #5d5d5d !important;
+    border: none !important;
+}
